# portfolio

./: README.md  contact.html  fonctionnalites.js  index.html  style.css
S1.01 - Implémentation d_un besoin client/: community_detection.py  test_community_detection.py
SAE-Diagrammes-de-Voronoi_A_B-main/: README.md
SAE-Diagrammes-de-Voronoi_A_B-main/phase1/fortune_a_partir_de_classes_donnees/: README.md  main.py
SAE-Diagrammes-de-Voronoi_A_B-main/phase2/phase_2_gpt_ioan/: README.md  pyproject.toml
SAE-Diagrammes-de-Voronoi_A_B-main/phase2/phase_2_gpt_ioan/src/voronoi/: main.py
SAE-Diagrammes-de-Voronoi_A_B-main/phase2/phase_2_gpt_ioan/src/voronoi/application/: bounding_box.py  file_reader.py  performance.py  voronoi_algorithm.py
SAE-Diagrammes-de-Voronoi_A_B-main/phase2/phase_2_gpt_ioan/src/voronoi/domain/: edge.py  point.py  polygon.py
SAE-Diagrammes-de-Voronoi_A_B-main/phase2/phase_2_gpt_ioan/src/voronoi/infrastructure/: svg_exporter.py
SAE-Diagrammes-de-Voronoi_A_B-main/phase2/phase_2_gpt_ioan/tests/: test_error_handling.py  test_file_reader.py  test_voronoi_algorithm.py
SAE_partie2_Dupont_Kapgnep/: Addition.java  Calculatrice.java  Division.java  Expression.java  Multiplication.java  Nombre.java  Operation.java  Soustraction.java
Watch Out/: README.md  jeu.py  localisation_pixel.py  modifier_image.py
jeu_pingouin/: jeu (1).css  jeu (1).html  jeu (1).js
projects/: calculatrice-java.html  implementation-besoin-client.html  jeu-pingouin.html  serendia.html  velib.html  voronoi.html  watch-out.html
(+133 files in other folders)
