[project]
name = "voronoi"
version = "0.1.0"
description = "Voronoi diagram generator"
authors = [{ name = "Your Name" }]
dependencies = []

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]